# kordex-cli

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  vix.json
app/: main.cpp
cmake/: KordexCliConfig.cmake.in  KordexCliOptions.cmake
docs/: README.md
examples/: CMakeLists.txt  parse_args.cpp  register_command.cpp  run_cli.cpp
include/kordex/cli/: ArgumentParser.hpp  BuildCommand.hpp  CheckCommand.hpp  Cli.hpp  CliConfig.hpp  CliOptions.hpp  CliResult.hpp  Command.hpp  CommandRegistry.hpp  Commands.hpp  Error.hpp  HelpFormatter.hpp  InitCommand.hpp  InstallCommand.hpp  Output.hpp  PermissionBridge.hpp  PluginCommandRegistry.hpp  ProjectDiscovery.hpp  ReplCommand.hpp  Result.hpp  RunCommand.hpp  UpdateCommand.hpp  Version.hpp  VersionCommand.hpp
src/: ArgumentParser.cpp  BuildCommand.cpp  CheckCommand.cpp  Cli.cpp  CliConfig.cpp  CliOptions.cpp  CliResult.cpp  Command.cpp  CommandRegistry.cpp  Commands.cpp  Error.cpp  HelpFormatter.cpp  InitCommand.cpp  InstallCommand.cpp  Output.cpp  PermissionBridge.cpp  PluginCommandRegistry.cpp  ProjectDiscovery.cpp  ReplCommand.cpp  RunCommand.cpp  UpdateCommand.cpp  Version.cpp  VersionCommand.cpp
tests/: CMakeLists.txt  test_argument_parser.cpp  test_cli.cpp  test_cli_config.cpp  test_cli_integration.cpp  test_cli_options.cpp  test_cli_result.cpp  test_command.cpp  test_command_registry.cpp  test_error.cpp  test_help_formatter.cpp  test_output.cpp  test_version.cpp
